--- a/css/style.css
+++ b/css/style.css
@@ -786,6 +786,7 @@ select.form-control:not([size]):not([multiple]) {
   display: block;
   height: 50px;
   width: 50px;
+  border-radius: 50%;
   text-align: center;
   background: #fff;
 }
