Gold color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ ul.social-links li a i {
 }
 
 span.alternate {
-  color: #800080;
+  color: #FFDB3F;
   font-style: italic;
   font-weight: 400;
 }
@@ -181,7 +181,7 @@ a {
 }
 
 a:focus, a:hover {
-  color: #800080;
+  color: #FFDB3F;
   text-decoration: none;
 }
 
@@ -194,7 +194,7 @@ button:hover {
 }
 
 .bg-blue {
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .bg-banner-one {
@@ -356,7 +356,7 @@ button:hover {
   height: 125px;
   width: 125px;
   font-size: 40px;
-  background: #800080;
+  background: #FFDB3F;
   border-radius: 100%;
   color: #fff;
   line-height: 125px;
@@ -379,7 +379,7 @@ button:hover {
 }
 
 .form-control.main:focus {
-  border: 1px solid #800080;
+  border: 1px solid #FFDB3F;
 }
 
 .form-control.white {
@@ -458,7 +458,7 @@ select.form-control:not([size]):not([multiple]) {
 .btn-main {
   padding: 25px 45px;
   border-radius: 3px;
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   outline: none;
 }
@@ -475,7 +475,7 @@ select.form-control:not([size]):not([multiple]) {
 .btn-main-md {
   padding: 15px 40px;
   border-radius: 0;
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   outline: none;
   font-size: 0.9375rem;
@@ -502,15 +502,15 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .btn-transparent-md:hover {
-  background: #800080;
-  border-color: #800080;
+  background: #FFDB3F;
+  border-color: #FFDB3F;
   color: #fff;
 }
 
 .btn-main-sm {
   padding: 15px 35px;
   border-radius: 3px;
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   outline: none;
   font-size: 14px;
@@ -533,7 +533,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .btn-white-md:hover {
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
 }
 
@@ -598,7 +598,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .main-nav .navbar-nav .nav-item.active .nav-link {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .main-nav .dropdown-slide {
@@ -615,7 +615,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .main-nav .dropdown-slide:hover .dropdown-menu {
-  border-top: 3px solid #800080;
+  border-top: 3px solid #FFDB3F;
   display: none;
   opacity: 1;
   display: block;
@@ -672,7 +672,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .main-nav .dropdown-slide .dropdown-menu .dropdown-item:hover {
   background: #fff;
-  color: #800080;
+  color: #FFDB3F;
 }
 
 @media (max-width: 480px) {
@@ -683,7 +683,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .main-nav .ticket {
-  background: #800080;
+  background: #FFDB3F;
   display: block;
   padding: 34px 32px;
 }
@@ -796,7 +796,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .footer-main .block ul.social-links-footer li a:hover {
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .footer-main .block ul.social-links-footer li a:hover i {
@@ -813,7 +813,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .subfooter .copyright-text p a {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 @media (max-width: 480px) {
@@ -827,7 +827,7 @@ select.form-control:not([size]):not([multiple]) {
   height: 45px;
   width: 45px;
   text-align: center;
-  background: #800080;
+  background: #FFDB3F;
   float: right;
 }
 
@@ -969,7 +969,7 @@ select.form-control:not([size]):not([multiple]) {
 .banner .block h1 {
   text-transform: uppercase;
   font-size: 5.5rem;
-  color: #800080;
+  color: #FFDB3F;
   font-weight: 500;
   margin-bottom: 5px;
   text-shadow: 3.5px 6.062px 0px rgba(0, 0, 0, 0.1);
@@ -1009,7 +1009,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .banner-two .block h1 {
-  color: #800080;
+  color: #FFDB3F;
   font-size: 88px;
 }
 
@@ -1075,7 +1075,7 @@ select.form-control:not([size]):not([multiple]) {
   content: "";
   width: 60px;
   height: 3px;
-  background: #800080;
+  background: #FFDB3F;
   display: block;
   margin-top: 10px;
 }
@@ -1146,7 +1146,7 @@ select.form-control:not([size]):not([multiple]) {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #800080;
+  background: #FFDB3F;
   opacity: .85;
   transition: .3s ease;
 }
@@ -1227,7 +1227,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .speakers .speaker-item .content h5 a:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .speakers .speaker-item .content p {
@@ -1260,7 +1260,7 @@ select.form-control:not([size]):not([multiple]) {
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-size: 1.5rem;
-  color: #800080;
+  color: #FFDB3F;
   font-weight: 500;
   display: block;
   border-radius: 0;
@@ -1278,7 +1278,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .schedule .schedule-tab ul li.nav-item a.active {
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   position: relative;
 }
@@ -1296,7 +1296,7 @@ select.form-control:not([size]):not([multiple]) {
   height: 0;
   border-style: solid;
   border-width: 0 20px 20px 0;
-  border-color: transparent #800080 transparent transparent;
+  border-color: transparent #FFDB3F transparent transparent;
 }
 
 @media (max-width: 767px) {
@@ -1385,7 +1385,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .schedule .schedule-contents .schedule-item li.headings {
   padding: 22px 40px;
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .schedule .schedule-contents .schedule-item li.headings div {
@@ -1444,7 +1444,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .schedule .schedule-contents .schedule-item li.schedule-details .block:hover span.name {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .schedule .download-button {
@@ -1502,7 +1502,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .schedule.two .schedule-tab ul li.nav-item a.active {
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   position: relative;
 }
@@ -1524,7 +1524,7 @@ select.form-control:not([size]):not([multiple]) {
   height: 0;
   border-style: solid;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #800080;
+  border-color: transparent transparent transparent #FFDB3F;
 }
 
 @media (max-width: 991px) {
@@ -1611,7 +1611,7 @@ select.form-control:not([size]):not([multiple]) {
 
 .schedule.two .schedule-contents .schedule-item li.headings {
   padding: 25px 0;
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .schedule.two .schedule-contents .schedule-item li.headings div {
@@ -1678,7 +1678,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .schedule.two .schedule-contents .schedule-item li.schedule-details .block:hover span.name {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .ticket-feature {
@@ -1755,7 +1755,7 @@ select.form-control:not([size]):not([multiple]) {
   position: relative;
   padding: 150px 10%;
   height: 100%;
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .ticket-feature .block-2 [class*=col-]:first-child {
@@ -1801,7 +1801,7 @@ select.form-control:not([size]):not([multiple]) {
   height: 0;
   border-style: solid;
   border-width: 0 0 1000px 300px;
-  border-color: transparent transparent #800080 transparent;
+  border-color: transparent transparent #FFDB3F transparent;
 }
 
 @media (max-width: 767px) {
@@ -1928,7 +1928,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .pricing .pricing-item .pricing-body ul.feature-list li p span.available {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .pricing .pricing-item .pricing-body ul.feature-list li p span.unavailable {
@@ -1949,8 +1949,8 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .pricing .pricing-item.featured .pricing-heading {
-  background: #800080;
-  border-bottom: 1px solid #800080;
+  background: #FFDB3F;
+  border-bottom: 1px solid #FFDB3F;
 }
 
 .pricing .pricing-item.featured .pricing-heading .title h6 {
@@ -2017,11 +2017,11 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .pricing.two .pricing-item .pricing-body ul.feature-list li p span.available {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .pricing.two .pricing-item.featured .pricing-heading:before {
-  border-color: #800080 transparent transparent transparent;
+  border-color: #FFDB3F transparent transparent transparent;
 }
 
 .sponsors {
@@ -2034,7 +2034,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .sponsors .sponsor-title h5 {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .sponsors .block {
@@ -2060,7 +2060,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .sponsors .block .image-block:hover {
-  border: 1px solid #800080;
+  border: 1px solid #FFDB3F;
 }
 
 .sponsors .sponsor-btn {
@@ -2082,7 +2082,7 @@ select.form-control:not([size]):not([multiple]) {
   padding: 45px 50px 50px 50px;
   top: 80px;
   left: 10%;
-  background: #800080;
+  background: #FFDB3F;
 }
 
 @media (max-width: 480px) {
@@ -2281,7 +2281,7 @@ select.form-control:not([size]):not([multiple]) {
 .video-promo .content-block a i.video {
   height: 125px;
   width: 125px;
-  background: #800080;
+  background: #FFDB3F;
   display: inline-block;
   font-size: 40px;
   color: #fff;
@@ -2344,11 +2344,11 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .testimonial .testimonial-slider .owl-dots .owl-dot:hover span {
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .testimonial .testimonial-slider .owl-dots .owl-dot.active span {
-  background: #800080;
+  background: #FFDB3F;
 }
 
 .single-speaker .block {
@@ -2377,7 +2377,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .single-speaker .block .content-block .profession p {
-  color: #800080;
+  color: #FFDB3F;
   font-size: 0.9375rem;
 }
 
@@ -2412,8 +2412,8 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .single-speaker .block .content-block .social-profiles ul.social-list li a:hover {
-  background: #800080;
-  border: 1px solid #800080;
+  background: #FFDB3F;
+  border: 1px solid #FFDB3F;
   color: #fff;
 }
 
@@ -2456,7 +2456,7 @@ select.form-control:not([size]):not([multiple]) {
   left: -25px;
   content: "\f10c";
   font-family: FontAwesome;
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .single-speaker .block-2 .skills .skill-bar {
@@ -2473,7 +2473,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .single-speaker .block-2 .skills .skill-bar .progress .progress-bar {
-  background-color: #800080;
+  background-color: #FFDB3F;
 }
 
 .single-speaker .block-2 .skills .skill-bar .progress .progress-bar span {
@@ -2503,7 +2503,7 @@ select.form-control:not([size]):not([multiple]) {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #800080;
+  background: #FFDB3F;
   opacity: .85;
   transition: .3s ease;
 }
@@ -2572,11 +2572,11 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .speakers-full-width .speaker-slider .slick-prev:hover:before, .speakers-full-width .speaker-slider .slick-next:hover:before {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .speakers-full-width .speaker-slider .slick-prev:before, .speakers-full-width .speaker-slider .slick-next:before {
-  color: #800080;
+  color: #FFDB3F;
   font-family: FontAwesome;
 }
 
@@ -2600,11 +2600,11 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .controls .control:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .mixitup-control-active {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 /* Container
@@ -2642,7 +2642,7 @@ select.form-control:not([size]):not([multiple]) {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #800080;
+  background: #FFDB3F;
   opacity: 0;
   -webkit-transform: scale(0.8);
           transform: scale(0.8);
@@ -2733,7 +2733,7 @@ select.form-control:not([size]):not([multiple]) {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #800080;
+  background: #FFDB3F;
   opacity: 0;
   -webkit-transform: scale(0.8);
           transform: scale(0.8);
@@ -2793,7 +2793,7 @@ select.form-control:not([size]):not([multiple]) {
   width: 65px;
   height: 65px;
   text-align: center;
-  background: #800080;
+  background: #FFDB3F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2832,7 +2832,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .news .blog-post .post-content .post-title h2 a:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .news .blog-post .post-content .post-meta ul {
@@ -2881,7 +2881,7 @@ select.form-control:not([size]):not([multiple]) {
 .news .blog-post.single .post-details .quotes {
   background: #f5f5f8;
   padding: 30px;
-  border-left: 3px solid #800080;
+  border-left: 3px solid #FFDB3F;
   margin: 15px 0;
 }
 
@@ -2944,7 +2944,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .news .blog-post.single .post-details .share-block .tag ul li a:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .news .blog-post.single .post-details .share-block .share {
@@ -2995,8 +2995,8 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .news .blog-post.single .post-details .share-block .share ul.social-links-share li a:hover {
-  background: #800080;
-  border-color: #800080;
+  background: #FFDB3F;
+  border-color: #FFDB3F;
 }
 
 .news .blog-post.single .post-details .share-block .share ul.social-links-share li a:hover i {
@@ -3047,7 +3047,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .news .comments .comment .media-body ul li a {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .news .comment-form h5 {
@@ -3082,15 +3082,15 @@ ul.pagination li a {
 }
 
 ul.pagination li a:hover, ul.pagination li a:focus {
-  background-color: #800080 !important;
+  background-color: #FFDB3F !important;
   color: #fff !important;
-  border-color: #800080 !important;
+  border-color: #FFDB3F !important;
 }
 
 ul.pagination .active a {
-  background-color: #800080 !important;
+  background-color: #FFDB3F !important;
   color: #fff !important;
-  border-color: #800080 !important;
+  border-color: #FFDB3F !important;
 }
 
 .sidebar {
@@ -3117,7 +3117,7 @@ ul.pagination .active a {
 }
 
 .widget.search .input-group .input-group-addon {
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
   border: none;
   border-radius: 0;
@@ -3143,7 +3143,7 @@ ul.pagination .active a {
 }
 
 .widget.category ul.category-list li a:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .widget.category ul.category-list li:last-child {
@@ -3159,9 +3159,9 @@ ul.pagination .active a {
 }
 
 .widget.tags ul li a:hover {
-  background: #800080;
+  background: #FFDB3F;
   color: #fff;
-  border-color: #800080;
+  border-color: #FFDB3F;
 }
 
 .widget.latest-post .media {
@@ -3184,7 +3184,7 @@ ul.pagination .active a {
 }
 
 .widget.latest-post .media .media-body h6 a:hover {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .widget.latest-post .media .media-body p span {
@@ -3235,7 +3235,7 @@ ul.pagination .active a {
   left: 0;
   top: 37px;
   content: "";
-  background: #800080;
+  background: #FFDB3F;
   width: 30px;
   height: 2px;
 }
@@ -3249,7 +3249,7 @@ ul.pagination .active a {
   width: 65px;
   height: 65px;
   text-align: center;
-  background: #800080;
+  background: #FFDB3F;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3348,8 +3348,8 @@ ul.pagination .active a {
 }
 
 .testimonial .testimonial-item .comment:hover {
-  background: #800080;
-  border: 1px solid #800080;
+  background: #FFDB3F;
+  border: 1px solid #FFDB3F;
 }
 
 .testimonial .testimonial-item .comment:hover p {
@@ -3357,11 +3357,11 @@ ul.pagination .active a {
 }
 
 .testimonial .testimonial-item .comment:hover:before {
-  border-color: transparent #800080 transparent transparent;
+  border-color: transparent #FFDB3F transparent transparent;
 }
 
 .testimonial .testimonial-item .comment:hover:after {
-  border-color: transparent #800080 transparent transparent;
+  border-color: transparent #FFDB3F transparent transparent;
 }
 
 .testimonial .testimonial-item .media {
@@ -3388,7 +3388,7 @@ ul.pagination .active a {
 
 .testimonial .testimonial-item .media .media-body .profession p {
   font-size: 0.8126rem;
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .error .block {
@@ -3402,7 +3402,7 @@ ul.pagination .active a {
 
 .error .block h3 {
   font-weight: 400;
-  color: #800080;
+  color: #FFDB3F;
   margin-bottom: 40px;
 }
 
@@ -3438,7 +3438,7 @@ ul.pagination .active a {
 }
 
 .faq .accordion-block #accordion .card .collapse.show + .card-header h5 a, .faq .accordion-block #accordionTwo .card .collapse.show + .card-header h5 a {
-  color: #800080;
+  color: #FFDB3F;
 }
 
 .contact-form .form-control {
