--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,7 @@ select.form-control:not([size]):not([multiple]) {
 .btn-outline-md:hover {
   background: #FFDB3F;
   color: #fff;
+  padding: 16px 41px;
   border: 0;
 }
 
