--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,8 @@ button:hover {
 .bg-banner-one {
   background: url(../images/background/homepage-one-banner.jpg) no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center;
+  height: 100vh;
 }
 
 .bg-banner-two {
