--- a/css/style.css
+++ b/css/style.css
@@ -573,10 +573,21 @@ select.form-control:not([size]):not([multiple]) {
 
 .main-nav {
   /* background: #fff;  changing default*/
-  background: transparent;
+
   color: white;
   transition: .3s;
 
+}
+
+.main-nav-white{
+  background-color: #fff;
+  max-height: 4.4rem;
+  transition: .4;
+}
+
+.main-nav-transparent{
+  background-color: transparent;
+  
 }
 
 .main-nav .navbar-brand {
@@ -611,6 +622,7 @@ select.form-control:not([size]):not([multiple]) {
   font-size: 1.06rem;
   font-family: "Montserrat", sans-serif;
 }
+
 
 .main-nav .navbar-nav .nav-item .nav-link.nav-link-black {
   position: relative;
