--- a/css/style.css
+++ b/css/style.css
@@ -3650,10 +3650,25 @@ ul.pagination .active a {
 
 .modal-textbox {
   position: absolute; 
-  top: 50%;
-  left:50%; 
+  /* top: 50%;
+  left:50%;  */
+  top: 4.4em;
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
   background-color: white;
-  transform: translateX(-50%);
+  /* transform: translateX(-50%); */
+}
+
+.modal-textbox .row {
+  height: 100vh;
+}
+
+.modal-textbox .row .col-md-6:first-child {
+  background-color: #000;
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  background-position: center;
 }
 
 .audition-faq .faq-text {
