--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,10 @@ select.form-control:not([size]):not([multiple]) {
 
 }
 
+.navbar {
+  z-index: -1; 
+}
+
 .main-nav-white{
   background-color: #fff;
   max-height: 4.4rem;
@@ -3652,12 +3656,13 @@ ul.pagination .active a {
   position: absolute; 
   /* top: 50%;
   left:50%;  */
-  top: 4.4em;
+  /* top: 4.4em; */
   left: 0; 
   width: 100%; 
   height: 100%; 
   background-color: white;
   /* transform: translateX(-50%); */
+  z-index: 10000;
 }
 
 .modal-textbox .row {
