--- a/css/style.css
+++ b/css/style.css
@@ -659,7 +659,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 
 .nav-background {
-  background: rgba(0, 0, 0, .9);
+  background: rgba(0, 0, 0, 1);
   color: white;
 }
 
